# dlp-rust

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  dlp-server.db-shm  dlp-server.db-wal  fix_admin_api.py  package-lock.json  resolve-merge.ps1  sonar-project.properties  update_plan.py  write_db_rs.py
.beads/: issues.jsonl  metadata.json
.claude/: settings.local.json
.github/workflows/: build.yml  nightly.yml
.gitnexus/: meta.json
.planning/: .continue-here.md  HANDOFF.json  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v0.6.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCH.md  ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  MAP.md  STACK.md  STRUCTURE.md  TECH.md  TESTING.md
.planning/debug/: agent-ui-lifecycle-stop-respawn.md  clipboard-monitoring-no-alerts.md  phase31-test6-rework.md  unregistered-usb-writes-allowed.md  usb-blocked-not-enforced.md  usb-deny-logged-but-write-succeeds.md  usb-device-notification-not-firing.md  usb-not-triggering-enforcement.md  usb-serial-stale-after-rereg.md  user-ui-spawn-loop.md
.planning/graphs/: .last-build-snapshot.json  GRAPH_REPORT.md
.planning/milestones/: v0.2.0-REQUIREMENTS.md  v0.3.0-REQUIREMENTS.md  v0.3.0-ROADMAP.md  v0.4.0-REQUIREMENTS.md  v0.4.0-ROADMAP.md  v0.5.0-REQUIREMENTS.md  v0.5.0-ROADMAP.md  v0.6.0-REQUIREMENTS.md  v0.6.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.planning/seeds/: SEED-001-application-aware-dlp.md  SEED-002-protected-clipboard-browser-boundary.md  SEED-003-usb-device-identity-whitelist.md
.planning/tmp/: docs-work-manifest.json  verify-ABAC_POLICIES.md.json  verify-ARCHITECTURE.md.json  verify-AUDIT_LOGGING.md.json  verify-CONFIGURATION.md.json  verify-DEVELOPMENT.md.json  verify-GETTING-STARTED.md.json  verify-IMPLEMENTATION_GUIDE.md.json  verify-MANUAL_TESTING.md.json  verify-README.md.json  (+5 more)
dlp-admin/: Cargo.toml
dlp-admin-cli/: Cargo.toml
dlp-admin-cli/src/: app.rs  client.rs  engine.rs  event.rs  lib.rs  login.rs  main.rs  password.rs  policy.rs  registry.rs  tui.rs  ui.rs
dlp-admin-cli/src/screens/: dispatch.rs  mod.rs  render.rs
dlp-admin/src/: main.rs  password.rs  policy.rs  ui.rs
dlp-agent/: Cargo.toml  build.rs
dlp-agent/installer/: DLPAgent.wxs  build.ps1  readme.md
dlp-agent/proto/: content_analysis.proto
dlp-agent/src/: audit_emitter.rs  cache.rs  config.rs  device_controller.rs  device_registry.rs  disk_enforcer.rs  engine_client.rs  health_monitor.rs  identity.rs  lib.rs  main.rs  offline.rs  password_stop.rs  protection.rs  server_client.rs  service.rs  session_identity.rs  session_monitor.rs  ui_spawner.rs  usb_enforcer.rs
dlp-agent/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
dlp-agent/src-tauri/capabilities/: default.json
dlp-agent/src-tauri/src/: lib.rs  main.rs  tray.rs  ui_main.rs
dlp-agent/src-tauri/src/dialogs/: mod.rs  stop_password.rs
dlp-agent/src-tauri/src/ipc/: frame.rs  messages.rs  mod.rs  pipe1.rs  pipe2.rs
dlp-agent/src/chrome/: cache.rs  frame.rs  handler.rs  mod.rs  proto.rs  registry.rs
dlp-agent/src/clipboard/: classifier.rs  listener.rs  mod.rs
dlp-agent/src/detection/: device_watcher.rs  disk.rs  encryption.rs  etw_bypass.rs  mod.rs  network_share.rs  usb.rs
dlp-agent/src/interception/: file_monitor.rs  mod.rs  policy_mapper.rs
dlp-agent/src/ipc/: frame.rs  messages.rs  mod.rs  pipe1.rs  pipe2.rs  pipe3.rs  pipe_security.rs  server.rs
dlp-agent/tests/: chrome_pipe.rs  comprehensive.rs  device_registry_cache.rs  encryption_integration.rs  integration.rs  negative.rs
dlp-common/: Cargo.toml
dlp-common/src/: abac.rs  ad_client.rs  audit.rs  classification.rs  classifier.rs  disk.rs  endpoint.rs  lib.rs  usb.rs
dlp-common/tests/: endpoint_cross_crate_compat.rs
dlp-e2e/: Cargo.toml
dlp-e2e/examples/: debug_tui.rs
dlp-e2e/src/: lib.rs
dlp-e2e/tests/: agent_toml_writeback.rs  agent_ui_lifecycle.rs  hot_reload_config.rs  tui_conditions_builder.rs  tui_device_registry.rs  tui_managed_origins.rs
dlp-server/: Cargo.toml
dlp-server/src/: ad_client.rs  admin_api.rs  admin_auth.rs  agent_registry.rs  alert_router.rs  audit_store.rs  bind_registry.rs  config_push.rs  db.rs  engine.rs  exception_store.rs  lib.rs  main.rs  policy_api.rs  policy_engine_error.rs  policy_store.rs  policy_sync.rs  rate_limiter.rs  siem_connector.rs
dlp-server/src/db/: mod.rs  unit_of_work.rs
dlp-server/src/db/repositories/: admin_users.rs  agent_config.rs  agents.rs  alert_router_config.rs  audit_events.rs  credentials.rs  device_registry.rs  disk_registry.rs  exceptions.rs  ldap_config.rs  managed_origins.rs  mod.rs  policies.rs  siem_config.rs
dlp-server/tests/: admin_audit_integration.rs  benchmark.rs  device_registry_integration.rs  hotreload.rs  integration.rs  ldap_config_api.rs  managed_origins_integration.rs  mode_end_to_end.rs
dlp-user-ui/: Cargo.toml  build.rs
dlp-user-ui/src/: app.rs  clipboard_monitor.rs  lib.rs  main.rs  notifications.rs  tray.rs
dlp-user-ui/src/detection/: app_identity.rs  mod.rs
dlp-user-ui/src/dialogs/: clipboard.rs  mod.rs  override_request.rs  stop_password.rs
dlp-user-ui/src/ipc/: frame.rs  messages.rs  mod.rs  pipe1.rs  pipe2.rs  pipe3.rs
dlp-user-ui/tests/: clipboard_integration.rs
docs/: ABAC_POLICIES.md  ARCHITECTURE.md  AUDIT_LOGGING.md  CONFIGURATION.md  DEVELOPMENT.md  GETTING-STARTED.md  IMPLEMENTATION_GUIDE.md  ISO27001_MAPPING.md  MANUAL_TESTING.md  OPERATIONAL.md  SECURITY_ARCHITECTURE.md  SECURITY_AUDIT.md  SECURITY_OVERVIEW.md  SRS.md  TESTING.md  THREAT_MODEL.md  task-tracker.md
graphify-out/: graph.json
installer/: DLPAgent.wxs  build.ps1  readme.md
policy-engine/: Cargo.toml
policy-engine/src/: ad_client.rs  bind_registry.rs  engine.rs  error.rs  http_server.rs  lib.rs  main.rs  policy_store.rs  rest_api.rs
policy-engine/tests/: benchmark.rs  hotreload.rs  integration.rs
policy-engine/tests/mock_ad/: main.rs
scripts/: Manage-DlpAgentService.ps1  Manage-DlpComponents.ps1  Uat-ReadMe.md  Uat-UsbBlock.ps1
(+452 files in other folders)
