[workspace]
resolver = "2"
members = ["dlp-common", "dlp-agent", "dlp-user-ui", "dlp-admin-cli", "dlp-server"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["DLP Team <dlp@example.com>"]
license = "Proprietary"
description = "Enterprise DLP System — NTFS + Active Directory + ABAC"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
anyhow = "1"
parking_lot = "0.12"
once_cell = "1"
uuid = { version = "1", features = ["v4"] }
bcrypt = "0.16"
notify = "7"
ldap3 = "0.11"
