[package]
name = "dlp-admin-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
# Password management
bcrypt = "0.16"
anyhow = "1"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# HTTP client to DLP Server
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Shared types from dlp-common
dlp-common = { path = "../dlp-common" }

# UUID v4 generation for caller-supplied policy IDs (POST /admin/policies requires non-empty id).
uuid = { version = "1", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_Registry",
    "Win32_Security",
    "Win32_Foundation",
] }
