[package]
name = "dlp-admin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
# Password management
bcrypt = "0.16"
anyhow = "1"

# Terminal I/O
rpassword = "7"

# HTTP client to Policy Engine
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Shared types from dlp-common
dlp-common = { path = "../dlp-common" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_Registry",
    "Win32_Security",
    "Win32_Foundation",
] }
