[package]
name = "dlp-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
# Shared types
dlp-common = { path = "../dlp-common" }

# Async runtime
tokio = { workspace = true }

# HTTP client for Policy Engine
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }
parking_lot = { workspace = true }
once_cell = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Windows Service
windows = { version = "0.58", features = [
    "Win32_Foundation",
    # identity.rs: ConvertSidToStringSidW, ConvertStringSidToSidW (Authorization submodule)
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Threading",
    "Win32_System_Services",
    "Win32_System_Console",
    "Win32_System_ProcessStatus",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_System_RemoteDesktop",
    "Win32_System_Diagnostics_Etw",
    "Win32_System_Time",
    "Win32_Security_Cryptography",
    "Win32_System_Memory",
    "Win32_System_Registry",
    "Win32_System_DataExchange",
    # clipboard/listener.rs + detection/usb.rs: SetWindowsHookExW, CreateWindowExW,
    # RegisterClassW, RegisterDeviceNotificationW, DEV_BROADCAST_DEVICEINTERFACE_W, etc.
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    # clipboard/listener.rs: GetModuleHandleW
    "Win32_System_LibraryLoader",
] }

# LDAP client for password verification (T-38)
ldap3 = { workspace = true }

# UUID generation
uuid = { workspace = true }

# Time
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
axum = { version = "0.7", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { workspace = true, features = ["test-util", "rt-multi-thread"] }

[target.'cfg(windows)'.dependencies]
windows-service = "0.8"
notify = { workspace = true }
