[package]
name = "dlp-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
# Shared types
dlp-common = { path = "../dlp-common" }

# Async runtime
tokio = { workspace = true }

# HTTP client for Policy Engine
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }
parking_lot = { workspace = true }
once_cell = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Windows Service
windows = { version = "0.62", features = [
    "Win32_Foundation",
    # identity.rs: ConvertSidToStringSidW, ConvertStringSidToSidW (Authorization submodule)
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Threading",
    "Win32_System_Services",
    "Win32_System_Console",
    "Win32_System_ProcessStatus",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_System_RemoteDesktop",
    "Win32_System_Diagnostics_Etw",
    "Win32_System_Time",
    "Win32_Security_Cryptography",
    "Win32_System_Memory",
    "Win32_System_Registry",
    # detection/network_share.rs: WNetOpenEnumW, WNetEnumResourceW (MPR/WNet submodule)
    "Win32_NetworkManagement_WNet",
    "Win32_System_DataExchange",
    # clipboard/listener.rs + detection/usb.rs: SetWindowsHookExW, CreateWindowExW,
    # RegisterClassW, RegisterDeviceNotificationW, DEV_BROADCAST_DEVICEINTERFACE_W, etc.
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    # clipboard/listener.rs: GetModuleHandleW
    "Win32_System_LibraryLoader",
    # ad_client.rs: DsGetSiteNameW (AD site lookup)
    "Win32_Networking_ActiveDirectory",
    # detection/usb.rs Plan 02: SetupDiGetClassDevsW, SetupDiEnumDeviceInfo,
    # SetupDiGetDeviceRegistryPropertyW for device friendly-name lookup.
    "Win32_Devices_DeviceAndDriverInstallation",
    # detection/encryption.rs: CoSetProxyBlanket (PktPrivacy auth upgrade).
    # wmi 0.14 uses windows 0.59 internally; we call CoSetProxyBlanket via raw
    # FFI to upgrade from CALL-level (wmi default) to PktPrivacy (D-02 requirement).
    "Win32_System_Com",
] }

# WMI for BitLocker queries (Phase 34 - Win32_EncryptableVolume in
# ROOT\CIMV2\Security\MicrosoftVolumeEncryption). Pinned at 0.14 per D-21a;
# rationale: minimize churn in Phase 34's scope. Future maintenance phase may
# bump to 0.18 once integration test coverage exists.
wmi = { version = "0.14", features = ["chrono"] }

# windows-core 0.59 is the version transitively used by wmi 0.14. We declare it
# as a direct dependency so we can bring the `Interface` trait into scope to call
# `IWbemServices::as_raw()` for the CoSetProxyBlanket PktPrivacy upgrade (D-02).
windows-core = "0.59"

# Password hashing: bcrypt for dlp-admin stop-password verification
bcrypt = "0.16"

# UUID generation
uuid = { workspace = true }

# Machine hostname
hostname = "0.4"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Protobuf (Chrome Enterprise Content Analysis)
prost = "0.14"
bytes = "1"

[features]
# Phase 34: real-Windows-only smoke tests against the live WMI namespace
# `ROOT\CIMV2\Security\MicrosoftVolumeEncryption` and the live BitLocker
# registry key. Default-off so CI on non-Windows runners stays green.
# Enable manually on a BitLocker-provisioned Windows host:
#   cargo test -p dlp-agent --features integration-tests
integration-tests = []

[dev-dependencies]
tempfile = "3"
axum = { version = "0.7", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { workspace = true, features = ["test-util", "rt-multi-thread"] }
# Serialize integration tests that share the global EncryptionChecker/DiskEnumerator singletons.
# Each test annotated with #[serial_test::serial] runs exclusively with no interleaving.
serial_test = "3"

[target.'cfg(windows)'.dependencies]
windows-service = "0.8"
notify = { workspace = true }

[build-dependencies]
prost-build = "0.14"
