[package]
name = "dlp-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[features]
default = []
# Enable std support (required for parking_lot, chrono, etc.)
std = []
