[package]
name = "dlp-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = { workspace = true }
tokio = { workspace = true }
ldap3 = { workspace = true }
ipnetwork = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_NetworkManagement_NetManagement",
    "Win32_NetworkManagement_Ndis",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_ActiveDirectory",
    "Win32_Networking_WinSock",
    "Win32_Foundation",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_System_Ioctl",
    "Win32_System_SystemInformation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_Security",
] }

[dev-dependencies]
tokio = { workspace = true }
