[package]
name = "dlp-user-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "DLP Agent iced UI — endpoint notifications, dialogs, clipboard, tray"

[dependencies]
# Shared DLP types (classification, text classifier)
dlp-common = { path = "../dlp-common" }

# Use tiny-skia (software renderer) instead of wgpu to avoid GPU
# initialization failures when spawned by a SYSTEM service into a
# user session via CreateProcessAsUserW.
iced = { version = "0.13", default-features = false, features = [
    "tiny-skia",
    "tokio",
] }
tray-icon = "0.19"
muda = "0.15"
winrt-notification = "0.5"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { version = "0.4", features = ["clock"] }
parking_lot = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    # Required by clipboard_monitor.rs — RegisterClassW/WNDCLASSW
    # are gated behind Win32_Graphics_Gdi in the `windows` crate.
    # Previously unified transitively via dlp-agent; made explicit
    # here so this package also builds standalone (e.g. under
    # `cargo check --package dlp-user-ui --tests`).
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_Security_Cryptography",
    "Win32_Storage_FileSystem",
    "Win32_System_DataExchange",
    "Win32_System_IO",
    "Win32_System_Memory",
    "Win32_System_Pipes",
    "Win32_System_RemoteDesktop",
    "Win32_System_Threading",
    "Win32_System_Ole",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
winres = "0.1"

[dev-dependencies]
# Unique per-run names for mock named pipes used in integration tests.
uuid = { workspace = true }
# Force sequential test execution — clipboard + env var state is
# process-wide, so parallel tests would race.
serial_test = "3"
