[package]
name = "policy-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
# Internal shared types
dlp-common = { path = "../dlp-common" }

# Async runtime
tokio = { workspace = true }

# Web server
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["util"] }
tower-layer = "0.3"
tower-http = { version = "0.5", features = ["trace", "cors"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"

# HTTP types
http = "1"

# HTTP client (for AD/LDAP or future outbound calls)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# TLS
rustls = "0.23"
rustls-native-certs = "0.3"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Hot-reload / file watching
notify = "8"
notify-debouncer-mini = "0.5"

# LDAP client
ldap3 = "0.11"

# Logging
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
log = "0.4"

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Async utilities
async-trait = "0.1"
dashmap = "6"
parking_lot = "0.12"

[[bin]]
name = "policy-engine"
path = "src/main.rs"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"], default-features = false }
tokio = { workspace = true, features = ["test-util", "rt-multi-thread"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full", "tokio", "server-auto"] }
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
axum = { version = "0.7", features = ["macros"] }
mockall = "0.13"
once_cell = "1"
tempfile = "3"
