[package]
name = "dlp-agent-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "DLP Agent Tauri UI"

[dependencies]
# Tauri 2.x
tauri = { version = "2", features = [] }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
parking_lot = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Windows named pipes
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_System_RemoteDesktop",
    "Win32_System_Threading",
] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
